--- a/.github/workflows/snk.yml
+++ b/.github/workflows/snk.yml
@@ -43,7 +43,7 @@ jobs:
 
       # Push the changes
       - name: Push changes
-        uses: actions/checkout@v3
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
